clusters/common/apps/tailscale-examples/sandbox/tsflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tsflow
spec:
  selector:
    app: tsflow
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  - name: proxy
    port: 3001
    protocol: TCP
    targetPort: 3001
  type: ClusterIP
