clusters/common/apps/tailscale-examples/sandbox/tsflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tsflow
  annotations:
    tailscale.com/proxy-group: "common-ingress"
spec:
  defaultBackend:
    service:
      name: tsflow
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - tsflow
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${LOCATION}-tsflow
  annotations:
    tailscale.com/tags: "tag:${LOCATION}"
    tailscale.com/proxy-group: "common-ingress"
spec:
  defaultBackend:
    service:
      name: tsflow
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - ${LOCATION}-tsflow
